<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/art_image_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/art"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:background="@drawable/round_background"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/nisan_2"
                app:fontFamily="@font/lora_bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/art_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/art_name"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:fontFamily="@font/lora_bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/writer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/writer_name"
                android:textColor="@color/text_writer_color"
                android:textSize="20sp"
                android:textStyle="italic"
                app:fontFamily="@font/lora" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:fontFamily="@font/lora" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/art_detail"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:fontFamily="@font/lora" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/light_back_button_background"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/shuffle_icon"
            tools:layout_editor_absoluteX="309dp"
            tools:layout_editor_absoluteY="7dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/twotone_favorite_icon"/>

    </androidx.appcompat.widget.Toolbar>




</androidx.constraintlayout.widget.ConstraintLayout>